--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,12 +18,11 @@ jobs:
         browser: [chrome, safari]
     runs-on: macos-latest
     steps:
-      - name: Checkout current branch (full)
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
         with:
           fetch-depth: 0
 
-      - name: Check that workflows are up to date
+      - run: sbt test
         env:
           BROWSER: ${{ matrix.browser }}
-        run: sbt test
+        
