--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,18 +4,13 @@ on:
   push:
     branches: ['**']
 
-env:
-  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
-  SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
-  PGP_SECRET: ${{ secrets.PGP_SECRET }}
-
 jobs:
   build:
     name: Build and Test
     strategy:
       matrix:
         browser: [chrome, safari]
+      fail-fast: false
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
