--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           fetch-depth: 0
 
-      - run: sbt test
+      - run: sbt a/test b/test
         env:
           BROWSER: ${{ matrix.browser }}
         
