--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,23 +1,6 @@
-x86_task:
-  container:
-    dockerfile: .cirrus/Dockerfile
-    cpu: 2
-    memory: 8G
-  script:
-    - clang --version
+freebsd_instance:
+  image_family: freebsd-13-0
 
-arm_task:
-  arm_container:
-    dockerfile: .cirrus/Dockerfile
-    cpu: 2
-    memory: 8G
-  script:
-    - clang --version
-
-jvm_macos_highcore_task:
-  macos_instance:
-    image: ghcr.io/cirruslabs/macos-ventura-base:latest
-    cpu: 4
-    memory: 8G
-  script:
-    - clang --version
+task:
+  install_script: pkg install -y clang
+  script: clang --version
