--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -2,5 +2,5 @@ freebsd_instance:
   image_family: freebsd-13-0
 
 task:
-  install_script: pkg install -y clang
+  install_script: pkg install -y llvm
   script: clang --version
