--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -3,4 +3,4 @@ task:
     image: sbtscala/scala-sbt:eclipse-temurin-jammy-17.0.5_8_1.9.0_3.3.0
     cpu: 4
     memory: 8G
-  script: sbt -version
+  script: sbt compile
